2007-01-02  Paolo Maggi  <paolo@gnome.org> 

	* gedit/gedit-python-plugin.c: cosmetic changes

2006-12-31  Paolo Borelli  <pborelli@katamail.com>

	* README:
	* HACKING:
	* message-of-doom:

	farewell CVS, welcome subversion.

2006-12-31  Paolo Maggi  <paolo@gnome.org>
	
	Fixes bug #356178 – Encodings not listed correctly in .po files
	      bug #321067 – gedit does not automatically detect utf-16
	      
	* data/gedit.schemas.in 
	(/apps/gedit-2/preferences/encodings/auto_detected key): 
	autodetects encoding of UTF-16 files. Improved comment for translators.

2006-12-29  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-widget.c: allow F2
	to rename and handle better modifiers for Delete.

2006-12-29  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-view.c: move idle removal in destroy to prevent
	so that it doesn't run on a destroyed view.

2006-12-28  Steve Frécinaux  <code@istique.net>

	Fix Bug 342042 – plugins create menus items which are not translatable.

	* plugins/externaltools/tools/library.py: Support l10n of embedded
	metadata keys, the way desktop files do.

	* plugins/externaltools/data/Makefile.am:
	* plugins/externaltools/data/build.desktop.in:
	* plugins/externaltools/data/build.tool.in:
	* plugins/externaltools/data/open-terminal-here.desktop.in:
	* plugins/externaltools/data/open-terminal-here.tool.in:
	* plugins/externaltools/data/remove-trailing-spaces.desktop.in:
	* plugins/externaltools/data/remove-trailing-spaces.tool.in:
	* plugins/externaltools/data/run-command.desktop.in:
	* plugins/externaltools/data/run-command.tool.in:

	Split the tools into a script file and a (translatable, intltoolable)
	desktop file. Those are merged at build time by a custom script working
	the way the script save code works in library.py.

	* plugins/externaltools/data/build:
	* plugins/externaltools/data/open-terminal-here:
	* plugins/externaltools/data/remove-trailing-spaces:
	* plugins/externaltools/data/run-command:
	