@@ -1,3 +1,8 @@
+2007-01-02  Joachim Noreiko  <jnoreiko@yahoo.com>
+
+  * plugins/snippets/data/docbook.xml:
+  * plugins/snippets/data/Makefile.am: add snippets for DocBook. #357089.
+
 2007-01-02  Paolo Maggi  <paolo@gnome.org> 
 
 	* gedit/gedit-python-plugin.c: cosmetic changes
